# lab1-lebedev-cryptobros

./: .gitignore  README-Gitpod.md  README.md  global.5ab90e1c.css  global.5ab90e1c.css.map  global.5ab90e1c.js  global.5ab90e1c.js.map  index.html  index.js  index.js.map  main.cea5deef.js  main.cea5deef.js.map  package.json
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: index.html
frontend/assets/css/: global.css
frontend/assets/js/: main.js
frontend/assets/js/near/: utils.js
